# VLMEvalKit

./: README.md
vlmeval/: config.py
vlmeval/vlm_custom/: __init__.py  smolvlm2_py.py  smolvlm2_rs.py  smolvlm_py.py  smolvlm_rs.py
vlmeval/vlm_custom/kornia_vlm_pyo3/: .gitignore  Cargo.toml
vlmeval/vlm_custom/kornia_vlm_pyo3/src/: lib.rs  smolvlm.rs  smolvlm2.rs
