[package]
name = "kornia_vlm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "kornia_vlm"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.25.0"

# NOTE: make sure the paths are correct; this is assuming VLMEvalKit is placed at the same level as kornia-rs
kornia-vlm = { path = "../../../../kornia-rs/crates/kornia-vlm", features = [
    "cuda",
] }
kornia-io = { path = "../../../../kornia-rs/crates/kornia-io" }
kornia-image = { path = "../../../../kornia-rs/crates/kornia-image" }

[workspace] # exclude it from the general workspace
